--- a/Home.css
+++ b/Home.css
@@ -1,103 +1,259 @@
 body{
     margin: 0;
+    padding: 0;
+}
+header{
+    width: 100%;
+    height: 120vh;
+    background-image: url("./headerBackGroundImg.jpg");
+    background-size: cover;
+}
+#fadeCont{
+    background-color: rgb(97, 71, 61);
+    width: 100%;
+    height: 100%;
+    opacity: 0.3;
+}
+#alignCont{
+    height: 20vh;
+    width: 100%;
+    top: 0;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 nav{
-    height: 15vh;
-    width: 100%;
+    height: 100%;
+    width: 80%;
     display: flex;
-    justify-content: space-between;
+    letter-spacing: 1px;
     font-family: Poppins;
 }
-#navLinksContainer{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 50%;
+nav > div{
     height: 100%;
 }
-#navLinksContainer > a{
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: 500;
-    color: #2c3e50;
-}
-#navLinksContainer > a:hover{
-    color: #56687a;
-}
-
-.dropbtn{
-    border: none;
-    background-color: white;
-    font-size: 18px;
-    font-weight: 500;
+#logoCont{
+    width: 15%;
     display: flex;
-    padding-top: 5%;
-}
-.dropdown:hover .dropbtn {
-    color: #2c3e50;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-.dropdown-content a {
-    /* float: none; */
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-#navBtnContainer{
-    height: 100%;
-    width: 50%;
-    display: flex;
+    justify-content: flex-start;
     align-items: center;
-    justify-content: flex-end;
-    padding-right: 4%;
     box-sizing: border-box;
 }
-#searchBar{
-    padding: 3% 5%;
-    border-radius: 30px;
-    margin-right: 4%;
-    background-color: rgb(241, 241, 241);
-    border: none;
+#logoCont > a > img{
+    width: 50%;
+    border-radius: 50%;
+    border: 1px solid rgb(228, 88, 38);;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+#pageLinksCont{
+    width: 65%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5%;
+}
+#pageLinksCont > a{
+    text-decoration: none;
+    color: rgb(255, 51, 0);
     font-size: 20px;
-}
-#loginBtn{
-    border: none;
-    margin-right: 4%;
-    background-color: white;
-    font-size: 18px;
-    font-weight: 500;
-    cursor: pointer;
-}
-#loginBtn:hover{
-    color: #2c3e50;
-}
-#signBtn{
-    padding: 3% 5%;
-    font-size: 16px;
     font-weight: 600;
-    color: white;
-    background-color: rgb(2, 2, 37);
-    border-radius: 50px;
-    border: none;
+}
+#navBtnCont{
+    width: 20%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 8%;
+}
+#navBtnCont > button{
+    padding: 5%;
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    border-radius: 30px;
     cursor: pointer;
 }
-#signBtn:hover{
-    background-color: rgb(46, 44, 73);
+#logInBtn{
+    background: none;
+    color: rgb(238, 56, 11);
+    text-shadow: 1px 1px white;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+#signInBtn{
+    background-color: rgb(228, 88, 38);
+    border: none;
+    color: white;
+    text-shadow: 1px 1px black;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+#logInBtn:hover{
+    background-color:rgb(228, 88, 38);
+    color: white;
+    text-shadow: 1px 1px black;
+}
+#signInBtn:hover{
+    background: none;
+    color: rgb(238, 56, 11);
+    text-shadow: 1px 1px white;
+}
+#headingInpContainer{
+    top: 20vh;
+    position: absolute;
+    height: 90vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: Poppins;
+    letter-spacing: 2px;
+}
+#headingInpContainer > h3{
+    color: white;
+    font-size: 200%;
+    margin: 0;
+    text-shadow: 1px 1px black;
+}
+#headingInpContainer > h1{
+    color: white;
+    font-size: 400%;
+    margin: 1%;
+    text-shadow: 1px 1px black;   
+}
+#headingInpContainer > div{
+    margin-top: 3%;
+    height: 15%;
+    width: 65%;
+    background-color: white;
+    border-radius: 20px;
+    display: flex;
+}
+#headingInpContainer > div > div{
+    height: 100%;
+    width: fit-content;
+    margin: auto;
+}
+#headingInpContainer > div > div > input {
+    padding: 8%;
+}
+.labels{
+    display: block;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.alignContainer{
+    width: 100%;
+    height: 20vh;
+    top: 110vh;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    border-radius: 20px;
+}
+.alignContainer > div{
+    width: 80%;
+    height: 20vh;
+    display: grid;
+    background-color: white;
+    border-radius: 20px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+.alignContainer > div > div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5%;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+.packageLogoCont{
+    width: 30%;
+    height: 80%;
+}
+.packageNames{
+    font-size: 20px;
+    font-weight: 600;
+    color: rgb(87, 84, 84);
+}
+#blankCont{
+    width: 100%;
+    height: 10vh;
+}
+.alignCont3{
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    justify-content: center;
+}
+#transparentCont{
+    height: 30vh;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#transparentCont > h1{
+    font-size: 700%;
+    font-weight: 900;
+    opacity: 0.1;
+}
+#alignCont4{
+    width: 100%;
+    height: 1px;
+    display: flex;
+    justify-content: center;
+}
+#overlapCont{
+    top: 130vh;
+    position: absolute;
+    height: 30vh;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#overlapCont > h2{
+    font-size: 300%;
+}
+.alignCont5{
+    height: 40vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+#partnerSection{
+    height: 40vh;
+    width: 80%;
+    text-align: center;
+}
+#partnerSection > div{
+    height: 20vh;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 2%;
+}
+#partnerSection > article{
+    height: fit-content;
+    width: 100%;
+    padding: 0 5%;
+    box-sizing: border-box;
+}
+#partnerSection > article > p{
+    font-size: 200%;
+    letter-spacing: 1px;
+    color: gray;
+}
+#partnerSection > div > div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5%;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    border-radius: 10px;
 }
