--- a/Home.css
+++ b/Home.css
@@ -249,13 +249,13 @@ nav > div{
     font-size: 300%;
 }
 .alignCont5{
-    height: 40vh;
+    height: 50vh;
     width: 100%;
     display: flex;
     justify-content: center;
 }
 #partnerSection{
-    height: 45vh;
+    height: 50vh;
     width: 80%;
     text-align: center;
     font-family: Poppins;
@@ -291,3 +291,226 @@ nav > div{
     font-size: 150%;
     letter-spacing: 1px;
 }
+
+/* --------------------------------------------- */
+#alignCont6{
+    height: 80vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#aboutSection{
+    height: 80vh;
+    border: 1px solid;
+    width: 80%;
+    display: grid;
+    font-family: Poppins;
+    grid-template-columns: repeat(2, 1fr);
+}
+#aboutSection > div{
+    display: flex;
+    padding: 15% 0;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+#aboutSection > div > h3, #Sh-ServiceCont > h3{
+    font-size: 400%;
+    margin: 0;
+    color: rgb(65, 19, 19);
+}
+#aboutSection > div > h4, #Sh-ServiceCont > h4{
+    font-size: 200%;
+    color: rgb(100, 90, 90);
+    margin: 0;
+}
+
+#aboutSection > div > p{
+    font-size: 150%;
+    color: rgb(75, 59, 59);
+    padding-right: 15%;
+    margin: 0;
+}
+#aboutSection > div > button, #Sh-ServiceCont > button{
+    background-color: rgb(48, 24, 24);
+    color: white;
+    font-size: 20px;
+    letter-spacing: 1px;
+    padding: 3%;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+#aboutSection > div > img{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
+
+/* --------------------Our service section styling------------------- */
+#alignCont7{
+    width: 100%;
+    height: 60vh;
+    display: flex;
+    justify-content: center;
+}
+#alignCont7 > section{
+    border: 1px solid;
+    width: 80%;
+    height: 100%;
+    font-family: Poppins;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+#Sh-gridCont{
+    padding: 10% 0;
+   display: grid;
+   grid-template-columns: repeat(2, 1fr);
+   grid-column-gap: 3%;
+   grid-row-gap: 3%;
+}
+#Sh-gridCont > div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+#Sh-gridCont > div > h3{
+}
+
+#Sh-ServiceCont{
+    display: flex;
+    padding: 10% 0;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+#Sh-ServiceCont > p{
+    font-size: 150%;
+    color: rgb(75, 59, 59);
+    padding-left: 15%;
+    text-align: right;
+    margin: 0;
+}
+
+/* footer Styling */
+
+#Nmidbody-conatiner {
+    width: 100%;
+    height: 457px;
+  }
+  /* footer css */
+  .Nabout-Footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+    width: 100%;
+    background-color: black;
+  }
+  
+  .Ncontent-Footer {
+    display: grid;
+    height: 200px;
+    width: 80%;
+    /* margin-left: 30px; */
+    /* background-color: bisque; */
+    display: grid;
+    /* grid-template-rows: (1, 1fr); */
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    /* margin-bottom: 100px; */
+  }
+  .Ncontent-Footer > div {
+    display: flex;
+    flex-direction: column;
+    margin-top: 54px;
+  
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* justify-content: space-around; */
+    /* color: white; */
+    /* justify-content: space-evenly; */
+    gap: 30px;
+    /* background-color: rgb(129, 151, 151); */
+  }
+  .Ncontent-Footer > :nth-child(2),
+  .Ncontent-Footer > :nth-child(3),
+  .Ncontent-Footer > :nth-child(4) {
+    margin-left: 60px;
+  }
+  
+  .Ncontent-Footer p {
+    margin: 0px;
+  }
+  #Nmargin-for-this {
+    margin-top: 42px;
+  }
+  
+  .Nfooter-Bold {
+    color: white;
+    font-size: larger;
+    text-decoration: none;
+    font-size: 14px;
+  }
+  .Nfooter-Grey {
+    color: rgb(159, 156, 156);
+    text-decoration: none;
+    font-size: 14px;
+  }
+  
+  .Nsocial-footer {
+    display: flex;
+    gap: 20px;
+    margin-top: -10px;
+  }
+  .Nfacebookimg {
+    width: 25px;
+    height: 35px;
+  }
+  
+  .Ntwitterimg {
+    width: 25px;
+    height: 35px;
+  }
+  
+  .Ninstaimg {
+    width: 25px;
+    height: 35px;
+  }
+  .Nline-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+    height: 72px;
+    width: 100%;
+    background-color: black;
+  }
+  
+  #Nline-footer {
+    width: 78%;
+    margin-left: 140px;
+    height: 0.1px;
+    border-radius: 10px;
+    background-color: rgb(159, 156, 156);
+  }
+  .Nafter-line {
+    display: flex;
+    justify-content: space-between;
+    width: 78%;
+    margin-top: 10px;
+    margin-left: 141px;
+    margin-right: 24px;
+    align-items: center;
+  }
+  .Nfooter-Grey2 {
+    color: rgb(159, 156, 156);
+    text-decoration: none;
+    font-size: 10px;
+  }
+  
