--- a/Home.css
+++ b/Home.css
@@ -424,15 +424,100 @@ nav > div{
 /* --------------------data wrapper styling-------------------------- */
 #Sh-alignCont9{
     width: 100%;
-    height: 150vh;
+    height: fit-content;
     display: flex;
     justify-content: center;
 }
-#Sh-data-main-container1{
+#data-Button-cont{
     width: 80%;
-    height: 100%;
-    border: 2px solid green;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+#Sh-data-main-container1{
+    width: 100%;
+    padding: 6% 0;
+    height:fit-content;
+}
+
+#Sh-data-main-container1{
+    width:85%;
+  /*  border:2px solid green; */
+    
+    display:grid;
+    grid-template-columns:repeat(3, 1fr);
+    grid-template-rows:auto;
+    gap:4%;
+    justify-content: center; 
+    margin: auto;
+  }
+  .subdiv{
+    width:100%;
+    height : 455px;
+  /*   border:1px solid red; */
+  border-radius: 7%;
+    text-align:center;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  }
+  .subdiv>img{
+    width:100%;
+    height:42%;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  }
+  
+   .btnR{
+    color:white;
+    background-color: red;
+    padding:12px;
+    border : none;
+    border-radius:10px;
+    position :relative;
+     top: -20px;
+     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  } 
+  
+  .last{
+    display:flex;
+    justify-content:space-around;
+    /* border: 1px solid green; */
+  }
+  
+  .bookdiv{
+    display:flex;
+    justify-content:space-around;
+    align-items: center;
+  /*   border:1px solid green; */
+    height : 10%;
+  }
+  
+  .booknow{
+   color:white;
+    background-color: blue; 
+    padding:9px;
+    border : none;
+     border-radius:10px;
+   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  }
+
+  #btnContainer{
+    height: 10vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #seeMoreCardBtn{
+    color:white;
+    background-color: rgb(95, 161, 34); 
+    padding: 15px;
+    border : none;
+     border-radius:10px;
+   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  }
 /* -------------------------------------------------------------- */
 
 #Sh-overlap3ndCont{
