--- a/Home.css
+++ b/Home.css
@@ -454,11 +454,13 @@ nav > div{
   /*   border:1px solid red; */
     border-radius: 7%;
     text-align: center;
+    box-sizing: border-box;
     font-family: Poppins;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   }
   .place-detail{
-    padding: 0 5%;
+    margin: 0;
+    padding: 0 2%;
     color: rgb(99, 94, 94);
   }
   .subdiv>img{
@@ -503,6 +505,11 @@ nav > div{
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   }
+  .booknow:hover{
+    color: rgb(17, 17, 88);
+    background-color: white;
+    border: 2px solid rgb(17, 17, 88);
+  }
 
   #btnContainer{
     height: 30vh;
@@ -524,32 +531,12 @@ nav > div{
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   }
-/* -------------------------------------------------------------- */
-
-/* #Sh-overlap3ndCont{
-    top: 550vh;
-    position: absolute;
-    height: 30vh;
-    width: 80%;
-    font-family: Poppins;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-} */
-/* ------------------2nd Data Container---------------------------------
-
-#Sh-alignCont11{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-}
-#Sh-data-main-container2{
-    width: 80%;
-    height: 100%;
+  #seeMoreCardBtn:hover{
+    background-color: white;
     border: 2px solid green;
-} */
-/* ------------------------------------------------------- */
+    color: green;
+  }
+
 
 #Sh-alignCont12{
     width: 100%;
