--- a/Home.css
+++ b/Home.css
@@ -5,7 +5,7 @@ body{
 header{
     width: 100%;
     height: 120vh;
-    background-image: url("./headerBackGroundImg.jpg");
+    background-image: url("./home-images/headerBackGroundImg.jpg");
     background-size: cover;
 }
 #Sh-fadeCont{
