--- a/paymentpage/payment.css
+++ b/paymentpage/payment.css
@@ -228,7 +228,7 @@ button:hover {
 }
 
 #btnContainer{
-  height: 30vh;
+  /* height: 30vh; */
   width: 100%;
   display: flex;
   align-items: center;
@@ -361,4 +361,125 @@ button:hover {
   font-size: 18px;
   font-family: Poppins;
   font-weight: 900;
+}
+
+/* Explore more packeges */
+#packegeheading{
+  height: 10vh;
+  /* border: 2px solid red; */
+  background-color: rgb(100, 100, 100);
+  width: 80%;
+  margin: 50px auto 0px auto;
+  letter-spacing: 7px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(255, 255, 255);
+
+}
+
+/* /////////////////////////////// */
+/* footer css */
+.Nabout-Footer {
+  /* margin-top: 100px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  width: 100%;
+  background-color: black;
+}
+
+.Ncontent-Footer {
+  display: grid;
+  height: 250px;
+  width: 80%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+.Ncontent-Footer > div {
+  display: flex;
+  flex-direction: column;
+  margin-top: 80px;
+  gap: 30px;
+}
+
+.Ncontent-Footer > :nth-child(2),
+.Ncontent-Footer > :nth-child(3) {
+  margin-left: 80px;
+}
+
+.Ncontent-Footer > :nth-child(4) {
+  margin-left: 150px;
+}
+.Ncontent-Footer p {
+  margin: 0px;
+}
+#Nmargin-for-this {
+  margin-top: 42px;
+}
+
+.Nfooter-Bold {
+  color: white;
+  font-size: larger;
+  text-decoration: none;
+  font-size: 18px;
+  font-family: Poppins;
+}
+.Nfooter-Grey {
+  color: rgb(159, 156, 156);
+  text-decoration: none;
+  font-size: 18px;
+  font-family: Poppins;
+}
+
+.Nsocial-footer {
+  display: flex;
+  gap: 20px;
+  margin-top: -10px;
+}
+.Nfacebookimg {
+  width: 25px;
+  height: 35px;
+}
+
+.Ntwitterimg {
+  width: 25px;
+  height: 35px;
+}
+
+.Ninstaimg {
+  width: 25px;
+  height: 35px;
+}
+.Nline-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  width: 100%;
+  background-color: black;
+}
+
+#Nline-footer {
+  width: 80%;
+  height: 0.1px;
+  border-radius: 10px;
+  background-color: rgb(159, 156, 156);
+}
+.Nafter-line {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin-top: 10px;
+  align-items: center;
+}
+.Nfooter-Grey2 {
+  color: rgb(159, 156, 156);
+  text-decoration: none;
+  font-size: 13px;
+  font-family: Poppins;
 }
